<resources>
    <string name="app_name">ProjetoAndroid</string>


    <string name="txtCadastro">Pacient registration</string>
    <string name="txtCadConsulta">Query registration</string>

    <string name="txtLogin">Clinic login</string>

    <string name="txtNome">Name: </string>
    <string name="hintNome">Type your name here</string>

    <string name="txtIdade">Age: </string>
    <string name="hintIdade">Type your age</string>

    <string name="txtProblema">Problem: </string>
    <string name="hintProblema">Describe you problem here</string>
    
    <string name="txtHorario">Schedule</string>

    <string name="txtEmail">E-mail: </string>
    <string name="hintEmail">Type your e-mail here</string>

    <string name="txtSenha">Password: </string>
    <string name="hintSenha">Type your password here</string>
    <string name="txtConSenha">Confirm password: </string>
    <string name="hintConSenha">Confirm your password here</string>

    <string name="txtAviso">All fields must be completed</string>

    <string name="txtConsultaOk">Your appointment was successfully marked</string>

    <string name="cadErro">User not created</string>
    <string name="cadAviso">The e-mail field must be filled and the password must be equals</string>
    <string name="cadAtencao">Atention!</string>

    <string name="usuarioErro">User must be filled!</string>
    <string name="senhaErro">Password must be filled!</string>

    <string name="loginErro">Login failed, user or password incorrect!</string>

    <string name="txtSair">Exit</string>


    <string name="btnCadastrar">Register</string>
    <string name="btnEntrar">Login</string>
    <string name="btnVoltar">Back</string>
    <string name="title_activity_lista">ListaActivity</string>

    <string name="selecione">Select...</string>
    
    <string name="delAlerta">Do you want to delete the pacient </string>

    <string name="Calcela">cancel</string>
    <string name="Sim">yes</string>

</resources>
