<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFAFA"
    tools:context="com.inf3m171.fernando.projetoandroid.LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/txtLogin"
        style="@style/estiloTitulo"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtEmail"
        android:inputType="textEmailAddress"
        style="@style/estiloCampos"
        android:id="@+id/etEmailEntrar"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtSenha"
        android:inputType="textPassword"
        style="@style/estiloCampos"
        android:id="@+id/etSenhaEntrar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#000"
        android:layout_margin="15dp">
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnCadastrar"
        style="@style/estiloButton"
        android:id="@+id/btnCadastrarNovo"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnEntrar"
        style="@style/estiloButton"
        android:id="@+id/btnEntrar"/>
    </LinearLayout>

</LinearLayout>
